tests/ui/closures/2229_closure_analysis/diagnostics/box.stderr
error[E0506]: cannot assign to `e.0.0.m.x` because it is borrowed
  --> $DIR/box.rs:21:5
   |
LL |     let mut c = || {
   |                 -- `e.0.0.m.x` is borrowed here
LL |         e.0.0.m.x = format!("not-x");
   |         --------- borrow occurs due to use in closure
...
LL |     e.0.0.m.x = format!("not-x");
   |     ^^^^^^^^^ `e.0.0.m.x` is assigned to here but it was already borrowed
LL |
LL |     c();
   |     - borrow later used here

error[E0502]: cannot borrow `e.0.0.m.x` as immutable because it is also borrowed as mutable
  --> $DIR/box.rs:38:20
   |
LL |     let mut c = || {
   |                 -- mutable borrow occurs here
LL |         e.0.0.m.x = format!("not-x");
   |         --------- first borrow occurs due to use of `e.0.0.m.x` in closure
...
LL |     println!("{}", e.0.0.m.x);
   |     ---------------^^^^^^^^^-
   |     |              |
   |     |              immutable borrow occurs here
   |     in this macro invocation (#1)
LL |
LL |     c();
   |     - mutable borrow later used here
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)

error[E0506]: cannot assign to `e.0.0.m.x` because it is borrowed
  --> $DIR/box.rs:55:5
   |
LL |     let c = || {
   |             -- `e.0.0.m.x` is borrowed here
LL |         println!("{}", e.0.0.m.x);
   |                        --------- borrow occurs due to use in closure
...
LL |     e.0.0.m.x = format!("not-x");
   |     ^^^^^^^^^ `e.0.0.m.x` is assigned to here but it was already borrowed
LL |
LL |     c();
   |     - borrow later used here

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0502, E0506.
For more information about an error, try `rustc --explain E0502`.
